Fixed issue where IDE was transparent on dark mode (#369)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -58,12 +58,16 @@ html[data-theme="dark"] {
   --ifm-color-primary: theme("colors.brand.500");
   --ifm-background-color: theme("colors.blue.950");
   --ifm-font-color-base: theme("colors.gray.50");
+  --prism-background-color: theme("colors.gray.900");
+  --ifm-pre-background: var(--prism-background-color);
 }
 
 html[data-theme="light"] {
   --ifm-color-primary: theme("colors.brand.700");
   --ifm-background-color: theme("colors.gray.50");
   --ifm-font-color-base: theme("colors.gray.900");
+  --prism-background-color: theme("colors.white");
+  --ifm-pre-background: var(--prism-background-color);
 }
 
 body {
